@@ -371,6 +371,10 @@ PHP 8.0 UPGRADE NOTES
 3. Changes in SAPI modules
 ========================================
 
+- CGI and FPM will now use CONTEXT_DOCUMENT_ROOT to scan for .user.ini files,
+  if it is defined. Otherwise, DOCUMENT_ROOT will be used as before. This
+  improves support for Apache mod_userdir and mod_alias.
+
 ========================================
 4. Deprecated Functionality
 ========================================
