@@ -25,6 +25,10 @@ PHP                                                                        NEWS
   . Add property DOMXPath::$registerNodeNamespaces and constructor argument
     that allow global flag to configure query() or evaluate() calls.
 
+- FPM:
+  . Fixed bug #64865 (Search for .user.ini files from script dir up to
+    CONTEXT_DOCUMENT_ROOT). (Will Bender)
+
 - GD:
   . Fixed bug #55005 (imagepolygon num_points requirement). (cmb)
   . Replaced gd resources with objects. (Mark Randall)
